home button was not visible, fixed

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -675,6 +675,23 @@ only screen and (min-device-pixel-ratio: 1.5) {
 	z-index: 1000;
 }
 
+#homeButton{
+	position: fixed;
+	top: 25px;
+	right: 50px;
+	text-shadow: 1px 1px 3px rgba(20, 20, 20, 1);
+	-webkit-text-stroke-width: 0.5px;
+	-webkit-text-stroke-color: #ccc;
+}
+
+#homeButton:hover{
+	color: #333;
+	cursor: pointer;
+	text-shadow: 1px 1px 3px rgba(20, 20, 20, 1);
+	-webkit-text-stroke-width: 0.5px;
+	-webkit-text-stroke-color: #ccc;
+}
+
 i#rightDropDown.dropdown-icon.fa.fa-2x.fa-cog{
 	position: fixed;
 	top: 25px;
